# ministry-scheduler

./: .air.toml  .env.example  .gitignore  .golangci.yaml  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  TASK_PROMPT.md  TASK_REFACTOR_AGENTS.md  bacon.toml  docker-compose.yaml  gleam.toml  go.mod  go.sum  justfile  main.go  opencode.json  package-lock.json  package.json  spec.md  sqlc.yaml  tailwind.config.js
app/: Cargo.toml  package-lock.json  package.json
app/assets/: tailwind.css
app/src/: main.rs
backend/app/: Cargo.toml
backend/app/src/: main.rs
client/: gleam.toml  manifest.toml
client/src/: client.gleam
client/src/client/components/: counter.gleam
cmd/app/: main.go
crates/oauth2/: Cargo.toml
crates/oauth2/src/: apis.rs  components.rs  lib.rs  server.rs  server_fns.rs
docs/: phase-1-plan.md  project-overview.md
docs/v1/: API_SPECIFICATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  MVP_ROADMAP.md  PROJECT.md
docs/v2/: API_SPECIFICATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  FUTURE_VISION.md  MVP_ROADMAP.md  PROJECT.md
frontend/: package.json
internal/domain/: user.go
internal/features/users/: api.go  repository.go  service.go  user.go
internal/handler/: user_http.go
internal/infra/: user_repo.go
internal/shared/database/: database.go
internal/shared/env/: env.go
internal/shared/middleware/: middleware.go
internal/usecase/: user.go
migrations/: 20250207145815_create_users_table.sql
server/: Cargo.toml  gleam.toml  manifest.toml
server/src/: db.rs  lib.rs  server.gleam
server/src/apis/: mod.rs  oauth2.rs
server/src/oauth2/: apis.rs  mod.rs  models.rs
server/src/server/server_components/: real_time_counter.gleam
spec/: requirements.md  ui_01.html  ui_02.html  ui_03.html  ui_04.html  ui_05.html  ui_06.html  ui_07.html  ui_08.html  ui_10.html  ui_11.html  ui_13.html  ui_14.html  ui_15.html  ui_16.html  ui_17.html  ui_18.html  ui_20.html  ui_22.html  ui_23.html  ui_24.html  ui_25.html  ui_26.html  ui_27.html  ui_28.html  ui_29.html
src/: main.rs  ministry_scheduler.gleam
static/: core.js  tailwind.css
templates/: index.html
test/domain/: user_domain_test.go
test/features/users/: service_test.go  user_test.go
test/usecase/: user_usecase_test.go
views/: index.html  index.templ
views/partials/: core.html
web/: Cargo.toml
web/src/: main.rs  routes.rs
web/src/views/: blog.rs  db_health_check.rs  home.rs  line_callback.rs  line_login.rs  mod.rs
