[workspace]
resolver = "2"
members = ["app", "crates/oauth2"]

[workspace.dependencies]
dioxus = { version = "0.6.2", default-features = false, features = [
  "html",
  "document",
  "macro",
  "signals",
  "hooks",
  "asset",
  "fullstack",
] }
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = "1.43.0"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["cookie"] }

oauth2 = { path = "crates/oauth2" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 0

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
