[workspace]
resolver = "2"
members = ["app", "server"]

[workspace.dependencies]
server = { path = "server" }

dioxus = { version = "0.6.2", default-features = false }
tokio = "1.43.0"
reqwest = "0.12.12"


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 0

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
