[package]
name = "ministry-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = [
  "parking_lot",
  "rt-multi-thread",
  "net",
  "macros",
] }
tower-http = { version = "0.6.2", features = ["fs"] }
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
minijinja = { version = "2.7.0", features = ["loader"] }
maud = { version = "0.27.0", features = ["axum"] }
