[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
server = { workspace = true, optional = true }

dioxus = { workspace = true, features = [
  "html",
  "document",
  "macro",
  "signals",
  "hooks",
  "asset",
  "launch",
  "router",
  "fullstack",
] }
reqwest = { workspace = true }
tokio = { workspace = true, optional = true }


[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "tokio", "dep:server"]
