[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
server = { workspace = true, optional = true }

dioxus = { workspace = true, features = [
  "web",
  "html",
  "document",
  "macro",
  "signals",
  "hooks",
  "asset",
  "launch",
  "router",
] }
reqwest = { workspace = true }
tokio = { workspace = true, optional = true }


[features]
server = ["tokio", "dep:server"]
