[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
serde = { version = "1.0.217", features = ["derive"] }

tokio = { version = "1.42.0", features = ["sync"], optional = true }
sqlx = { version = "0.8.3", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls-ring",
  "uuid",
], optional = true }
oauth2 = { version = "4.4.2", features = ["reqwest"], optional = true }
reqwest = { version = "0.12.12", features = ["json"], optional = true }

[features]
api = ["db", "oauth2"]
oauth2 = ["dep:oauth2", "reqwest"]
db = ["tokio", "sqlx"]
