[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
serde = { workspace = true }

thiserror = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }

oauth2 = { version = "5.0.0", features = ["reqwest"], optional = true }
uuid = { version = "1.11.0", features = ["v4"], optional = true }
chrono = { version = "0.4.39", optional = true }

[features]
default = []
api = [
  "thiserror",
  "serde_json",
  "tokio",
  "axum",
  "axum-extra",
  "sqlx",
  "oauth2",
  "reqwest",
  "uuid",
  "chrono",
]
