[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["cookie"] }
dotenv = { version = "0.15.0" }
dioxus-cli-config = { version = "0.6.2" }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
] }
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = { version = "0.4.39" }
