[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
server = { workspace = true }

dotenv = { version = "0.15.0", optional = true }
web-sys = { version = "0.3.76", optional = true }

[features]
default = ["web-sys"]
web = ["dioxus/web"]
server = ["dioxus/server", "dotenv", "server/api"]
