[package]
name = "oauth2"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

web-sys = { version = "0.3.76" }

oauth2 = { version = "4.4.2", features = ["reqwest"], optional = true }
reqwest = { version = "0.12.12", features = ["json"], optional = true }
uuid = { version = "1.11.0", features = ["v4"], optional = true }
chrono = { version = "0.4.39", optional = true }

[features]
default = []
server = ["oauth2", "reqwest", "uuid", "chrono"]
